Labs/lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Break
    COMMENT
    Continue
    RESERVED
    While

Grammar

Rule 0     S' -> CompUnit
Rule 1     CompUnit -> FuncDef
Rule 2     FuncDef -> FuncType Main LPar RPar Block
Rule 3     FuncType -> Int
Rule 4     Block -> LBrace AddBlock RBrace
Rule 5     AddBlock -> BlockItem
Rule 6     AddBlock -> BlockItem AddBlock
Rule 7     BlockItem -> Decl
Rule 8     BlockItem -> Stmt
Rule 9     Decl -> ConstDecl
Rule 10    Decl -> VarDecl
Rule 11    ConstDecl -> Const BType AddConstDef Semicolon
Rule 12    AddConstDef -> ConstDef Comma AddConstDef
Rule 13    AddConstDef -> ConstDef
Rule 14    ConstDef -> IDENT Assign ConstInitVal
Rule 15    BType -> Int
Rule 16    ConstInitVal -> AddExp
Rule 17    VarDecl -> BType AddVarDef Semicolon
Rule 18    AddVarDef -> VarDef Comma AddVarDef
Rule 19    AddVarDef -> VarDef
Rule 20    VarDef -> IDENT
Rule 21    VarDef -> IDENT Assign InitVal
Rule 22    InitVal -> Exp
Rule 23    Stmt -> Semicolon
Rule 24    Stmt -> Block
Rule 25    Stmt -> Exp Semicolon
Rule 26    Stmt -> Return Exp Semicolon
Rule 27    Stmt -> LVal Assign Exp Semicolon
Rule 28    Stmt -> If LPar Cond RPar Stmt
Rule 29    Stmt -> If LPar Cond RPar Stmt Else Stmt
Rule 30    Cond -> LOrExp
Rule 31    LOrExp -> LAndExp
Rule 32    LOrExp -> LOrExp OR LAndExp
Rule 33    LAndExp -> EqExp
Rule 34    LAndExp -> LAndExp AND EqExp
Rule 35    EqExp -> RelExp
Rule 36    EqExp -> EqExp Eq RelExp
Rule 37    EqExp -> EqExp NotEq RelExp
Rule 38    RelExp -> AddExp
Rule 39    RelExp -> RelExp Lt AddExp
Rule 40    RelExp -> RelExp Gt AddExp
Rule 41    RelExp -> RelExp Le AddExp
Rule 42    RelExp -> RelExp Ge AddExp
Rule 43    LVal -> IDENT
Rule 44    Exp -> AddExp
Rule 45    AddExp -> MulExp
Rule 46    AddExp -> AddExp Plus MulExp
Rule 47    AddExp -> AddExp Minus MulExp
Rule 48    MulExp -> UnaryExp
Rule 49    MulExp -> MulExp Div UnaryExp
Rule 50    MulExp -> MulExp Mult UnaryExp
Rule 51    MulExp -> MulExp Mod UnaryExp
Rule 52    UnaryExp -> PrimaryExp
Rule 53    UnaryExp -> Plus UnaryExp
Rule 54    UnaryExp -> Minus UnaryExp
Rule 55    UnaryExp -> SysFunc LPar RPar
Rule 56    UnaryExp -> SysFunc LPar FuncRParams RPar
Rule 57    FuncRParams -> Exp Exps
Rule 58    FuncRParams -> Exp
Rule 59    Exps -> Comma Exp
Rule 60    PrimaryExp -> LPar Exp RPar
Rule 61    PrimaryExp -> Number
Rule 62    PrimaryExp -> LVal
Rule 63    Number -> DECIMAL
Rule 64    Number -> OCTAL
Rule 65    Number -> HEXADECIMAL

Terminals, with rules where they appear

AND                  : 34
Assign               : 14 21 27
Break                : 
COMMENT              : 
Comma                : 12 18 59
Const                : 11
Continue             : 
DECIMAL              : 63
Div                  : 49
Else                 : 29
Eq                   : 36
Ge                   : 42
Gt                   : 40
HEXADECIMAL          : 65
IDENT                : 14 20 21 43
If                   : 28 29
Int                  : 3 15
LBrace               : 4
LPar                 : 2 28 29 55 56 60
Le                   : 41
Lt                   : 39
Main                 : 2
Minus                : 47 54
Mod                  : 51
Mult                 : 50
NotEq                : 37
OCTAL                : 64
OR                   : 32
Plus                 : 46 53
RBrace               : 4
RESERVED             : 
RPar                 : 2 28 29 55 56 60
Return               : 26
Semicolon            : 11 17 23 25 26 27
SysFunc              : 55 56
While                : 
error                : 

Nonterminals, with rules where they appear

AddBlock             : 4 6
AddConstDef          : 11 12
AddExp               : 16 38 39 40 41 42 44 46 47
AddVarDef            : 17 18
BType                : 11 17
Block                : 2 24
BlockItem            : 5 6
CompUnit             : 0
Cond                 : 28 29
ConstDecl            : 9
ConstDef             : 12 13
ConstInitVal         : 14
Decl                 : 7
EqExp                : 33 34 36 37
Exp                  : 22 25 26 27 57 58 59 60
Exps                 : 57
FuncDef              : 1
FuncRParams          : 56
FuncType             : 2
InitVal              : 21
LAndExp              : 31 32 34
LOrExp               : 30 32
LVal                 : 27 62
MulExp               : 45 46 47 49 50 51
Number               : 61
PrimaryExp           : 52
RelExp               : 35 36 37 39 40 41 42
Stmt                 : 8 28 29 29
UnaryExp             : 48 49 50 51 53 54
VarDecl              : 10
VarDef               : 18 19

Parsing method: LALR

state 0

    (0) S' -> . CompUnit
    (1) CompUnit -> . FuncDef
    (2) FuncDef -> . FuncType Main LPar RPar Block
    (3) FuncType -> . Int

    Int             shift and go to state 4

    CompUnit                       shift and go to state 1
    FuncDef                        shift and go to state 2
    FuncType                       shift and go to state 3

state 1

    (0) S' -> CompUnit .



state 2

    (1) CompUnit -> FuncDef .

    $end            reduce using rule 1 (CompUnit -> FuncDef .)


state 3

    (2) FuncDef -> FuncType . Main LPar RPar Block

    Main            shift and go to state 5


state 4

    (3) FuncType -> Int .

    Main            reduce using rule 3 (FuncType -> Int .)


state 5

    (2) FuncDef -> FuncType Main . LPar RPar Block

    LPar            shift and go to state 6


state 6

    (2) FuncDef -> FuncType Main LPar . RPar Block

    RPar            shift and go to state 7


state 7

    (2) FuncDef -> FuncType Main LPar RPar . Block
    (4) Block -> . LBrace AddBlock RBrace

    LBrace          shift and go to state 9

    Block                          shift and go to state 8

state 8

    (2) FuncDef -> FuncType Main LPar RPar Block .

    $end            reduce using rule 2 (FuncDef -> FuncType Main LPar RPar Block .)


state 9

    (4) Block -> LBrace . AddBlock RBrace
    (5) AddBlock -> . BlockItem
    (6) AddBlock -> . BlockItem AddBlock
    (7) BlockItem -> . Decl
    (8) BlockItem -> . Stmt
    (9) Decl -> . ConstDecl
    (10) Decl -> . VarDecl
    (23) Stmt -> . Semicolon
    (24) Stmt -> . Block
    (25) Stmt -> . Exp Semicolon
    (26) Stmt -> . Return Exp Semicolon
    (27) Stmt -> . LVal Assign Exp Semicolon
    (28) Stmt -> . If LPar Cond RPar Stmt
    (29) Stmt -> . If LPar Cond RPar Stmt Else Stmt
    (11) ConstDecl -> . Const BType AddConstDef Semicolon
    (17) VarDecl -> . BType AddVarDef Semicolon
    (4) Block -> . LBrace AddBlock RBrace
    (44) Exp -> . AddExp
    (43) LVal -> . IDENT
    (15) BType -> . Int
    (45) AddExp -> . MulExp
    (46) AddExp -> . AddExp Plus MulExp
    (47) AddExp -> . AddExp Minus MulExp
    (48) MulExp -> . UnaryExp
    (49) MulExp -> . MulExp Div UnaryExp
    (50) MulExp -> . MulExp Mult UnaryExp
    (51) MulExp -> . MulExp Mod UnaryExp
    (52) UnaryExp -> . PrimaryExp
    (53) UnaryExp -> . Plus UnaryExp
    (54) UnaryExp -> . Minus UnaryExp
    (55) UnaryExp -> . SysFunc LPar RPar
    (56) UnaryExp -> . SysFunc LPar FuncRParams RPar
    (60) PrimaryExp -> . LPar Exp RPar
    (61) PrimaryExp -> . Number
    (62) PrimaryExp -> . LVal
    (63) Number -> . DECIMAL
    (64) Number -> . OCTAL
    (65) Number -> . HEXADECIMAL

    Semicolon       shift and go to state 16
    Return          shift and go to state 19
    If              shift and go to state 21
    Const           shift and go to state 23
    LBrace          shift and go to state 9
    IDENT           shift and go to state 26
    Int             shift and go to state 27
    Plus            shift and go to state 29
    Minus           shift and go to state 30
    SysFunc         shift and go to state 33
    LPar            shift and go to state 22
    DECIMAL         shift and go to state 35
    OCTAL           shift and go to state 36
    HEXADECIMAL     shift and go to state 37

    AddBlock                       shift and go to state 10
    BlockItem                      shift and go to state 11
    Decl                           shift and go to state 12
    Stmt                           shift and go to state 13
    ConstDecl                      shift and go to state 14
    VarDecl                        shift and go to state 15
    Block                          shift and go to state 17
    Exp                            shift and go to state 18
    LVal                           shift and go to state 20
    BType                          shift and go to state 24
    AddExp                         shift and go to state 25
    MulExp                         shift and go to state 28
    UnaryExp                       shift and go to state 31
    PrimaryExp                     shift and go to state 32
    Number                         shift and go to state 34

state 10

    (4) Block -> LBrace AddBlock . RBrace

    RBrace          shift and go to state 38


state 11

    (5) AddBlock -> BlockItem .
    (6) AddBlock -> BlockItem . AddBlock
    (5) AddBlock -> . BlockItem
    (6) AddBlock -> . BlockItem AddBlock
    (7) BlockItem -> . Decl
    (8) BlockItem -> . Stmt
    (9) Decl -> . ConstDecl
    (10) Decl -> . VarDecl
    (23) Stmt -> . Semicolon
    (24) Stmt -> . Block
    (25) Stmt -> . Exp Semicolon
    (26) Stmt -> . Return Exp Semicolon
    (27) Stmt -> . LVal Assign Exp Semicolon
    (28) Stmt -> . If LPar Cond RPar Stmt
    (29) Stmt -> . If LPar Cond RPar Stmt Else Stmt
    (11) ConstDecl -> . Const BType AddConstDef Semicolon
    (17) VarDecl -> . BType AddVarDef Semicolon
    (4) Block -> . LBrace AddBlock RBrace
    (44) Exp -> . AddExp
    (43) LVal -> . IDENT
    (15) BType -> . Int
    (45) AddExp -> . MulExp
    (46) AddExp -> . AddExp Plus MulExp
    (47) AddExp -> . AddExp Minus MulExp
    (48) MulExp -> . UnaryExp
    (49) MulExp -> . MulExp Div UnaryExp
    (50) MulExp -> . MulExp Mult UnaryExp
    (51) MulExp -> . MulExp Mod UnaryExp
    (52) UnaryExp -> . PrimaryExp
    (53) UnaryExp -> . Plus UnaryExp
    (54) UnaryExp -> . Minus UnaryExp
    (55) UnaryExp -> . SysFunc LPar RPar
    (56) UnaryExp -> . SysFunc LPar FuncRParams RPar
    (60) PrimaryExp -> . LPar Exp RPar
    (61) PrimaryExp -> . Number
    (62) PrimaryExp -> . LVal
    (63) Number -> . DECIMAL
    (64) Number -> . OCTAL
    (65) Number -> . HEXADECIMAL

    RBrace          reduce using rule 5 (AddBlock -> BlockItem .)
    Semicolon       shift and go to state 16
    Return          shift and go to state 19
    If              shift and go to state 21
    Const           shift and go to state 23
    LBrace          shift and go to state 9
    IDENT           shift and go to state 26
    Int             shift and go to state 27
    Plus            shift and go to state 29
    Minus           shift and go to state 30
    SysFunc         shift and go to state 33
    LPar            shift and go to state 22
    DECIMAL         shift and go to state 35
    OCTAL           shift and go to state 36
    HEXADECIMAL     shift and go to state 37

    BlockItem                      shift and go to state 11
    AddBlock                       shift and go to state 39
    Decl                           shift and go to state 12
    Stmt                           shift and go to state 13
    ConstDecl                      shift and go to state 14
    VarDecl                        shift and go to state 15
    Block                          shift and go to state 17
    Exp                            shift and go to state 18
    LVal                           shift and go to state 20
    BType                          shift and go to state 24
    AddExp                         shift and go to state 25
    MulExp                         shift and go to state 28
    UnaryExp                       shift and go to state 31
    PrimaryExp                     shift and go to state 32
    Number                         shift and go to state 34

state 12

    (7) BlockItem -> Decl .

    Semicolon       reduce using rule 7 (BlockItem -> Decl .)
    Return          reduce using rule 7 (BlockItem -> Decl .)
    If              reduce using rule 7 (BlockItem -> Decl .)
    Const           reduce using rule 7 (BlockItem -> Decl .)
    LBrace          reduce using rule 7 (BlockItem -> Decl .)
    IDENT           reduce using rule 7 (BlockItem -> Decl .)
    Int             reduce using rule 7 (BlockItem -> Decl .)
    Plus            reduce using rule 7 (BlockItem -> Decl .)
    Minus           reduce using rule 7 (BlockItem -> Decl .)
    SysFunc         reduce using rule 7 (BlockItem -> Decl .)
    LPar            reduce using rule 7 (BlockItem -> Decl .)
    DECIMAL         reduce using rule 7 (BlockItem -> Decl .)
    OCTAL           reduce using rule 7 (BlockItem -> Decl .)
    HEXADECIMAL     reduce using rule 7 (BlockItem -> Decl .)
    RBrace          reduce using rule 7 (BlockItem -> Decl .)


state 13

    (8) BlockItem -> Stmt .

    Semicolon       reduce using rule 8 (BlockItem -> Stmt .)
    Return          reduce using rule 8 (BlockItem -> Stmt .)
    If              reduce using rule 8 (BlockItem -> Stmt .)
    Const           reduce using rule 8 (BlockItem -> Stmt .)
    LBrace          reduce using rule 8 (BlockItem -> Stmt .)
    IDENT           reduce using rule 8 (BlockItem -> Stmt .)
    Int             reduce using rule 8 (BlockItem -> Stmt .)
    Plus            reduce using rule 8 (BlockItem -> Stmt .)
    Minus           reduce using rule 8 (BlockItem -> Stmt .)
    SysFunc         reduce using rule 8 (BlockItem -> Stmt .)
    LPar            reduce using rule 8 (BlockItem -> Stmt .)
    DECIMAL         reduce using rule 8 (BlockItem -> Stmt .)
    OCTAL           reduce using rule 8 (BlockItem -> Stmt .)
    HEXADECIMAL     reduce using rule 8 (BlockItem -> Stmt .)
    RBrace          reduce using rule 8 (BlockItem -> Stmt .)


state 14

    (9) Decl -> ConstDecl .

    Semicolon       reduce using rule 9 (Decl -> ConstDecl .)
    Return          reduce using rule 9 (Decl -> ConstDecl .)
    If              reduce using rule 9 (Decl -> ConstDecl .)
    Const           reduce using rule 9 (Decl -> ConstDecl .)
    LBrace          reduce using rule 9 (Decl -> ConstDecl .)
    IDENT           reduce using rule 9 (Decl -> ConstDecl .)
    Int             reduce using rule 9 (Decl -> ConstDecl .)
    Plus            reduce using rule 9 (Decl -> ConstDecl .)
    Minus           reduce using rule 9 (Decl -> ConstDecl .)
    SysFunc         reduce using rule 9 (Decl -> ConstDecl .)
    LPar            reduce using rule 9 (Decl -> ConstDecl .)
    DECIMAL         reduce using rule 9 (Decl -> ConstDecl .)
    OCTAL           reduce using rule 9 (Decl -> ConstDecl .)
    HEXADECIMAL     reduce using rule 9 (Decl -> ConstDecl .)
    RBrace          reduce using rule 9 (Decl -> ConstDecl .)


state 15

    (10) Decl -> VarDecl .

    Semicolon       reduce using rule 10 (Decl -> VarDecl .)
    Return          reduce using rule 10 (Decl -> VarDecl .)
    If              reduce using rule 10 (Decl -> VarDecl .)
    Const           reduce using rule 10 (Decl -> VarDecl .)
    LBrace          reduce using rule 10 (Decl -> VarDecl .)
    IDENT           reduce using rule 10 (Decl -> VarDecl .)
    Int             reduce using rule 10 (Decl -> VarDecl .)
    Plus            reduce using rule 10 (Decl -> VarDecl .)
    Minus           reduce using rule 10 (Decl -> VarDecl .)
    SysFunc         reduce using rule 10 (Decl -> VarDecl .)
    LPar            reduce using rule 10 (Decl -> VarDecl .)
    DECIMAL         reduce using rule 10 (Decl -> VarDecl .)
    OCTAL           reduce using rule 10 (Decl -> VarDecl .)
    HEXADECIMAL     reduce using rule 10 (Decl -> VarDecl .)
    RBrace          reduce using rule 10 (Decl -> VarDecl .)


state 16

    (23) Stmt -> Semicolon .

    Semicolon       reduce using rule 23 (Stmt -> Semicolon .)
    Return          reduce using rule 23 (Stmt -> Semicolon .)
    If              reduce using rule 23 (Stmt -> Semicolon .)
    Const           reduce using rule 23 (Stmt -> Semicolon .)
    LBrace          reduce using rule 23 (Stmt -> Semicolon .)
    IDENT           reduce using rule 23 (Stmt -> Semicolon .)
    Int             reduce using rule 23 (Stmt -> Semicolon .)
    Plus            reduce using rule 23 (Stmt -> Semicolon .)
    Minus           reduce using rule 23 (Stmt -> Semicolon .)
    SysFunc         reduce using rule 23 (Stmt -> Semicolon .)
    LPar            reduce using rule 23 (Stmt -> Semicolon .)
    DECIMAL         reduce using rule 23 (Stmt -> Semicolon .)
    OCTAL           reduce using rule 23 (Stmt -> Semicolon .)
    HEXADECIMAL     reduce using rule 23 (Stmt -> Semicolon .)
    RBrace          reduce using rule 23 (Stmt -> Semicolon .)
    Else            reduce using rule 23 (Stmt -> Semicolon .)


state 17

    (24) Stmt -> Block .

    Semicolon       reduce using rule 24 (Stmt -> Block .)
    Return          reduce using rule 24 (Stmt -> Block .)
    If              reduce using rule 24 (Stmt -> Block .)
    Const           reduce using rule 24 (Stmt -> Block .)
    LBrace          reduce using rule 24 (Stmt -> Block .)
    IDENT           reduce using rule 24 (Stmt -> Block .)
    Int             reduce using rule 24 (Stmt -> Block .)
    Plus            reduce using rule 24 (Stmt -> Block .)
    Minus           reduce using rule 24 (Stmt -> Block .)
    SysFunc         reduce using rule 24 (Stmt -> Block .)
    LPar            reduce using rule 24 (Stmt -> Block .)
    DECIMAL         reduce using rule 24 (Stmt -> Block .)
    OCTAL           reduce using rule 24 (Stmt -> Block .)
    HEXADECIMAL     reduce using rule 24 (Stmt -> Block .)
    RBrace          reduce using rule 24 (Stmt -> Block .)
    Else            reduce using rule 24 (Stmt -> Block .)


state 18

    (25) Stmt -> Exp . Semicolon

    Semicolon       shift and go to state 40


state 19

    (26) Stmt -> Return . Exp Semicolon
    (44) Exp -> . AddExp
    (45) AddExp -> . MulExp
    (46) AddExp -> . AddExp Plus MulExp
    (47) AddExp -> . AddExp Minus MulExp
    (48) MulExp -> . UnaryExp
    (49) MulExp -> . MulExp Div UnaryExp
    (50) MulExp -> . MulExp Mult UnaryExp
    (51) MulExp -> . MulExp Mod UnaryExp
    (52) UnaryExp -> . PrimaryExp
    (53) UnaryExp -> . Plus UnaryExp
    (54) UnaryExp -> . Minus UnaryExp
    (55) UnaryExp -> . SysFunc LPar RPar
    (56) UnaryExp -> . SysFunc LPar FuncRParams RPar
    (60) PrimaryExp -> . LPar Exp RPar
    (61) PrimaryExp -> . Number
    (62) PrimaryExp -> . LVal
    (63) Number -> . DECIMAL
    (64) Number -> . OCTAL
    (65) Number -> . HEXADECIMAL
    (43) LVal -> . IDENT

    Plus            shift and go to state 29
    Minus           shift and go to state 30
    SysFunc         shift and go to state 33
    LPar            shift and go to state 22
    DECIMAL         shift and go to state 35
    OCTAL           shift and go to state 36
    HEXADECIMAL     shift and go to state 37
    IDENT           shift and go to state 26

    Exp                            shift and go to state 41
    AddExp                         shift and go to state 25
    MulExp                         shift and go to state 28
    UnaryExp                       shift and go to state 31
    PrimaryExp                     shift and go to state 32
    Number                         shift and go to state 34
    LVal                           shift and go to state 42

state 20

    (27) Stmt -> LVal . Assign Exp Semicolon
    (62) PrimaryExp -> LVal .

    Assign          shift and go to state 43
    Div             reduce using rule 62 (PrimaryExp -> LVal .)
    Mult            reduce using rule 62 (PrimaryExp -> LVal .)
    Mod             reduce using rule 62 (PrimaryExp -> LVal .)
    Plus            reduce using rule 62 (PrimaryExp -> LVal .)
    Minus           reduce using rule 62 (PrimaryExp -> LVal .)
    Semicolon       reduce using rule 62 (PrimaryExp -> LVal .)


state 21

    (28) Stmt -> If . LPar Cond RPar Stmt
    (29) Stmt -> If . LPar Cond RPar Stmt Else Stmt

    LPar            shift and go to state 44


state 22

    (60) PrimaryExp -> LPar . Exp RPar
    (44) Exp -> . AddExp
    (45) AddExp -> . MulExp
    (46) AddExp -> . AddExp Plus MulExp
    (47) AddExp -> . AddExp Minus MulExp
    (48) MulExp -> . UnaryExp
    (49) MulExp -> . MulExp Div UnaryExp
    (50) MulExp -> . MulExp Mult UnaryExp
    (51) MulExp -> . MulExp Mod UnaryExp
    (52) UnaryExp -> . PrimaryExp
    (53) UnaryExp -> . Plus UnaryExp
    (54) UnaryExp -> . Minus UnaryExp
    (55) UnaryExp -> . SysFunc LPar RPar
    (56) UnaryExp -> . SysFunc LPar FuncRParams RPar
    (60) PrimaryExp -> . LPar Exp RPar
    (61) PrimaryExp -> . Number
    (62) PrimaryExp -> . LVal
    (63) Number -> . DECIMAL
    (64) Number -> . OCTAL
    (65) Number -> . HEXADECIMAL
    (43) LVal -> . IDENT

    Plus            shift and go to state 29
    Minus           shift and go to state 30
    SysFunc         shift and go to state 33
    LPar            shift and go to state 22
    DECIMAL         shift and go to state 35
    OCTAL           shift and go to state 36
    HEXADECIMAL     shift and go to state 37
    IDENT           shift and go to state 26

    Exp                            shift and go to state 45
    AddExp                         shift and go to state 25
    MulExp                         shift and go to state 28
    UnaryExp                       shift and go to state 31
    PrimaryExp                     shift and go to state 32
    Number                         shift and go to state 34
    LVal                           shift and go to state 42

state 23

    (11) ConstDecl -> Const . BType AddConstDef Semicolon
    (15) BType -> . Int

    Int             shift and go to state 27

    BType                          shift and go to state 46

state 24

    (17) VarDecl -> BType . AddVarDef Semicolon
    (18) AddVarDef -> . VarDef Comma AddVarDef
    (19) AddVarDef -> . VarDef
    (20) VarDef -> . IDENT
    (21) VarDef -> . IDENT Assign InitVal

    IDENT           shift and go to state 49

    AddVarDef                      shift and go to state 47
    VarDef                         shift and go to state 48

state 25

    (44) Exp -> AddExp .
    (46) AddExp -> AddExp . Plus MulExp
    (47) AddExp -> AddExp . Minus MulExp

    Semicolon       reduce using rule 44 (Exp -> AddExp .)
    RPar            reduce using rule 44 (Exp -> AddExp .)
    Comma           reduce using rule 44 (Exp -> AddExp .)
    Plus            shift and go to state 50
    Minus           shift and go to state 51


state 26

    (43) LVal -> IDENT .

    Assign          reduce using rule 43 (LVal -> IDENT .)
    Div             reduce using rule 43 (LVal -> IDENT .)
    Mult            reduce using rule 43 (LVal -> IDENT .)
    Mod             reduce using rule 43 (LVal -> IDENT .)
    Plus            reduce using rule 43 (LVal -> IDENT .)
    Minus           reduce using rule 43 (LVal -> IDENT .)
    Semicolon       reduce using rule 43 (LVal -> IDENT .)
    RPar            reduce using rule 43 (LVal -> IDENT .)
    Lt              reduce using rule 43 (LVal -> IDENT .)
    Gt              reduce using rule 43 (LVal -> IDENT .)
    Le              reduce using rule 43 (LVal -> IDENT .)
    Ge              reduce using rule 43 (LVal -> IDENT .)
    Eq              reduce using rule 43 (LVal -> IDENT .)
    NotEq           reduce using rule 43 (LVal -> IDENT .)
    AND             reduce using rule 43 (LVal -> IDENT .)
    OR              reduce using rule 43 (LVal -> IDENT .)
    Comma           reduce using rule 43 (LVal -> IDENT .)


state 27

    (15) BType -> Int .

    IDENT           reduce using rule 15 (BType -> Int .)


state 28

    (45) AddExp -> MulExp .
    (49) MulExp -> MulExp . Div UnaryExp
    (50) MulExp -> MulExp . Mult UnaryExp
    (51) MulExp -> MulExp . Mod UnaryExp
